<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Family Assistant</string>
    <string name="action_settings">Logout</string>
    <string name="hello_world">Hello world!</string>
	
	<string-array name="items">
        <item>Calendar</item>
        <item>Chores</item>
        <item>Bulletin Board</item>
        <item>Groceries</item>
        <item>Supplies</item>
        <item>Location</item>
        <item>Lock</item>
        <item>Child Device Info</item>
        <item>Settings</item>
    </string-array>
    
 
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="RegistrationForm">Registration Form</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignUp">SignUp</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="noAcc">I don\'t have account. Register Me!</string>
    <string name="skipReg">Skip. Login in later!</string>
    <string name="weight">Weight</string>
    <string name="pounds">lbs</string>
    <string name="VerifyPass">Retype Password</string>
    <string name="future">Future</string>
    <string name="past">Past</string>
    <string name="today">Today</string>
    <string name="event_name">Event Name</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="update">Update</string>
    <string name="lock">Lock</string>
    <string name="edit_user">Edit User</string>
    <string name="change_family_password">Change Family Password</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="logout_of_family">Logout Of Family</string>
    <string name="description">description</string>
    <string name="pick_user_color">Pick user color</string>
    <string name="check">Check</string>
    <string name="retype_kid_password">Retype Kid Password</string>
    <string name="kid_password">Kid Password</string>
    <string name="retype_parent_password">Retype Parent Password</string>
    <string name="parent_password">Parent Password</string>
    <string name="exit">Exit</string>
</resources>
