<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/AppointmentAddLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/regform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/RegistrationForm"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/regUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Username" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/regRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/VerifyPass"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/regFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/FirstName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/LastName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/SignupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="startsignup"
                android:text="@string/SignUp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>