<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
 
    <LinearLayout
        android:id="@+id/loginPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/title"
            style="@style/myheader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="@string/login"
            android:textStyle="bold" />

        <ImageView
            android:contentDescription="@string/description"
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
        
        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"/>
        
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        

           
       
         
        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
 

        <Button
            android:id="@+id/RegisterScreenButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/noAcc"
            android:textColor="#0000d4"
            android:textStyle="bold" />

    </LinearLayout>
 
</ScrollView>

