<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/AppointmentAddLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/regform"
                style="@style/myheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Join Family"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/famName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Family Name" 

                
            />

            <LinearLayout
                android:id="@+id/makePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible" >

                <EditText
                    android:id="@+id/parPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/parent_password"
                    android:inputType="textPassword"/>

                <EditText
                    android:id="@+id/reParPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/retype_parent_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/kidPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/kid_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/reKidPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/retype_kid_password"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/CheckButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="checkPass"
                android:text="@string/check" 
                />
        </LinearLayout>
    </ScrollView>

